--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,37 @@
 *:focus:not(:focus-visible){
     outline: none;
 }
+
+@font-face {
+	font-family: 'Museo Sans Cyrl 700';
+	src: url('../fonts/MuseoSansCyrl-700.eot');
+	src: local('MuseoSansCyrl-700'),
+		url('../fonts/MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/MuseoSansCyrl-700.woff') format('woff'),
+		url('../fonts/') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
 html,body{
     font-size: 62.5%; 
+    font-family: 'Roboto', sans-serif;
+    color:white;
+}
+h1,h2,h3,h4,h5,h6{
+    margin: 0;
+    padding: 0;
 }
 .container{
     width: 113.5rem; 
     margin: 0 auto;
 }
 .header{
-    padding-top: 6.4rem;
+    position: absolute;
     padding-bottom: 6.4rem;
+    left: 50%;
+    top: 6.4rem;
+    transform: translate(-50%, 0);
 }
 .header .container {
     display: flex;
@@ -33,8 +54,11 @@ html,body{
     margin-right: 2.4rem;
 }
 .header_nav a {
-    color: white;
     text-decoration: none;
+    font-weight: normal;
+    font-size: 1.4rem;
+    line-height: 114%;
+    color:#FFFFFF;
 }
 .header_socials-icon{
     width: 1.7rem;
@@ -43,12 +67,80 @@ html,body{
 .header_socials-icon:not(:last-child){
     margin-right: 2rem;
 }
-body{
+
+.main{
+    padding-top: 18.7rem;
     background: url("../img/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: top;
 }
+
+.main_rating-title{
+    font-size: 1.4rem;
+    line-height: 114%;
+    margin-bottom: 1.6rem;
+}
+.main_rating-wrap{
+    display: flex;
+    align-items:center;
+    width: 191px;
+    margin-bottom: 1rem;
+}
+.main_rating-stars{
+    display: flex;
+    align-items:center;
+    margin-right: .9rem;
+}
+.main_rating-star:not(:last-child){
+    margin-right: 0.4rem;
+}
+.main_rating-number{
+    font-size: 1.2rem;
+line-height: 117%;
+}
+.main_rating-star{
+    width: 1.2rem;
+    height: 1.15rem;
+    flex-shrink: 0;
+    cursor: pointer;
+}
+
+.main_header{
+    width: 27rem;
+    height: 9.1rem;
+    font-family: 'Museo Sans Cyrl 700';
+    font-size: 7.6rem;
+    line-height: 120%;
+    
+}
+
+.main_description{
+    margin-top: .8rem;
+    max-width: 52.8rem;
+    font-size: 1.4rem;
+    line-height: 150%;
+}
+
+.main_button{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    border-radius: .8rem;
+    padding: 2.2rem 7.2rem;
+    background: #151515;
+    width: 24.5rem;
+    font-size: 1.4rem;
+    line-height: 114%;
+    text-decoration: none;
+    color: white;
+    margin-top: 4.1rem;
+    margin-bottom: 8.8rem;
+}
+
 .footer{
     background:#030102;
-    color:white;
     padding-bottom: 2rem;
     padding-top: 2rem;
 }
@@ -70,5 +162,15 @@ body{
 }
 .footer_menu li a{
     text-decoration: none;
-    color:white;
+    color:#686767;
+    font-weight: normal;
+    font-size: 1.4rem;
+    line-height: 143%;
+}
+
+.footer_copy{
+    color:#686767;
+    font-weight: normal;
+    font-size: 1.4rem;
+    line-height: 143%;
 }
