--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 }
 
 html,body{
-    font-size: 62.5%; 
+    font-size: 64.1%; 
     font-family: 'Roboto', sans-serif;
     color:white;
 }
@@ -75,6 +75,7 @@ h1,h2,h3,h4,h5,h6{
     background-size: cover;
     background-position-x: center;
     background-position-y: top;
+    padding-bottom: 10.4rem;
 }
 
 .main_rating-title{
@@ -116,12 +117,39 @@ line-height: 117%;
     
 }
 
+.main_description-wrap{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .main_description{
     margin-top: .8rem;
     max-width: 52.8rem;
     font-size: 1.4rem;
     line-height: 150%;
 }
+.main_button-play{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 13.2rem;
+    height: 13.2rem;
+    margin-left: 33.1rem;
+    border-radius: 50%;
+    background: #3A1616;
+    cursor: pointer;
+}
+.main_button-dark{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    background:#151515;
+    
+}
+
 
 .main_button{
     display: flex;
@@ -137,6 +165,40 @@ line-height: 117%;
     color: white;
     margin-top: 4.1rem;
     margin-bottom: 8.8rem;
+}
+
+.main-slider_wrap{
+    max-width: 41.6rem;
+    display: flex;
+    align-items:center;
+}
+.main-slider_slide{
+    width: 16.4rem;
+    height: 10.5rem;
+    border-radius: .8rem;
+    overflow: hidden;
+    
+}
+.main-slider_slide span{
+    position:absolute;
+    left: 1.17rem;
+    bottom: .6rem;
+    transform: translate(0,0%);
+    font-size: 1rem;
+    line-height: 120%;
+
+}
+.main-slider_slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.main-slider_arrow{
+    width: 3.2rem;
+    height: 2.2rem;
+    flex-shrink: 0;
+    margin-left: 2.8rem;
+    cursor: pointer;
 }
 
 .footer{
