--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,96 @@ h1,h2,h3,h4,h5,h6{
     margin: 0;
     padding: 0;
 }
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+@media (max-width: 108em) {
+    html {
+        font-size: 9px;
+    }
+}
+
+@media (max-width: 105em) {
+    html {
+        font-size: 8.75px;
+    }
+}
+
+@media (max-width: 91.5em) {
+    html {
+        font-size: 7.9px;
+    }
+}
+
+@media (max-width: 91em) {
+    html {
+        font-size: 8.4px;
+    }
+}
+
+@media (max-width: 90em) {
+    html {
+        font-size: 7.9px;
+    }
+}
+
+@media (max-width: 80em) {
+    html {
+        font-size: 7.2px
+    }
+}
+
+@media (max-width: 72em) {
+    html {
+        font-size: 6.5px;
+    }
+}
+
+@media (max-width: 64em) {
+    html {
+        font-size: 5.5px;
+    }
+}
+
+@media (max-width: 44em) {
+    html {
+        font-size: 9px;
+    }
+}
+
+@media (max-width: 38em) {
+    html {
+        font-size: 8px;
+    }
+}
+
+@media (max-width: 34em) {
+    html {
+        font-size: 7px;
+    }
+}
+
+@media (max-width: 30em) {
+    html {
+        font-size: 6px;
+    }
+}
+
+@media (max-width: 26em) {
+    html {
+        font-size: 4.5px;
+    }
+}
+
+@media (max-width: 21em) {
+    html {
+        font-size: 4.4px;
+    }
+}
+
 .container{
     width: 113.5rem; 
     margin: 0 auto;
@@ -60,12 +150,21 @@ h1,h2,h3,h4,h5,h6{
     line-height: 114%;
     color:#FFFFFF;
 }
+.header_nav-mobile{
+    display: none;
+}
+.header_social{
+    display: flex;
+}
 .header_socials-icon{
     width: 1.7rem;
     height: 1.6rem;
 }
 .header_socials-icon:not(:last-child){
     margin-right: 2rem;
+}
+.header_nav-mobile, .header_menu-close, .menu-burger{
+    display: none;
 }
 
 .main{
@@ -147,7 +246,10 @@ line-height: 117%;
     height: 10rem;
     border-radius: 50%;
     background:#151515;
-    
+}
+.main_button-dark img{
+    width: 3.5rem;
+    height: 4rem;
 }
 
 
@@ -235,4 +337,130 @@ line-height: 117%;
     font-weight: normal;
     font-size: 1.4rem;
     line-height: 143%;
+}
+
+.modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: rgbta(0,0,0,0.5);
+    padding: 3rem 0;
+    z-index: 100;
+    display: none;
+}
+.modal_inner{
+    width: 100rem;
+    height: 60rem;
+
+}
+
+.active{
+    display: flex;
+}
+
+@media (max-width: 48em) {
+    html {
+        font-size: 10px;
+    }
+    .container{
+        width: 100%;
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+    .header{
+        width: 69.4%;
+        background-color: #151515;
+        top: 0;
+        transform: translate(-28%,0);
+        padding-bottom: 4rem;
+        padding-top: 4rem;
+        display: none;
+        z-index: 10;
+    }
+    .header_logo{
+        margin-right: 0;
+        margin-bottom: 3.5rem;
+    }
+    .header_social{
+        margin-bottom: 2.2rem;
+    }
+    .header .container, .header-nav , .header_menu {
+        display: flex;
+        flex-direction: column;
+    }
+    .header_nav{
+        display: none;
+    }
+    .header_nav-mobile{
+        display: flex;
+        flex-direction: column;
+    }
+    .header_nav-mobile a{
+        text-decoration: none;
+        font-weight: normal;
+        font-size: 1.4rem;
+        line-height: 114%;
+        color:#FFFFFF;
+    }
+    .header_nav-mobile a{
+        display: inline-block;
+    }
+    .header_nav-mobile a:not(:last-child){
+        margin-bottom: 1.7rem;
+    }
+    .header_menu-close{
+        display: block;
+        position: absolute;
+        right: 4rem;
+        top: 4rem;
+        width: 2.3rem;
+        height: 2.3rem;
+    }
+    .menu-burger{
+        display: block;
+        position: absolute;
+        right: 5%;
+        top: 0;
+        width: 6rem;
+        height: 6rem;
+    }
+    .main{
+        background-position: 66%;
+    }
+    .main_description-wrap{
+        flex-direction: column;
+        margin-bottom: 5rem;
+    }
+    .main_button-play{
+        margin-left: 0;
+    }
+    .main_button{
+        margin-bottom: 4.4rem;
+    }
+    .main-slider_arrow{
+        display: none;
+    }
+    .main-slider_wrap{
+        max-width: 53.5%;
+    }
+    .footer .container{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .modal{
+        padding: 3rem;
+    }
+    .modal_inner{
+        width: 100%;
+        height: 40rem;
+    }
 }
